--- a/module-3/lab-supervised-learning-feature-extraction/your-code/main.ipynb
+++ b/module-3/lab-supervised-learning-feature-extraction/your-code/main.ipynb
@@ -1108,7 +1108,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -1136,7 +1136,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -1277,7 +1277,7 @@
        "4   2018-06-20                 1.1    4.4 and up              0.0  "
       ]
      },
-     "execution_count": 39,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1301,7 +1301,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -1349,7 +1349,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1369,7 +1369,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -1461,7 +1461,7 @@
        "4  Positive                1.00                0.300000  "
       ]
      },
-     "execution_count": 42,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1499,7 +1499,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Your code here:\n"
+    "# Your code here:\n",
+    "review_missing_removed = google_review.dropna()"
    ]
   },
   {
@@ -1513,9 +1514,82 @@
    "cell_type": "code",
    "execution_count": 29,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Bowmasters                                            312\n",
+       "Helix Jump                                            273\n",
+       "Angry Birds Classic                                   273\n",
+       "Calorie Counter - MyFitnessPal                        254\n",
+       "Duolingo: Learn Languages Free                        240\n",
+       "Candy Crush Saga                                      240\n",
+       "Garena Free Fire                                      222\n",
+       "8 Ball Pool                                           219\n",
+       "Calorie Counter - Macros                              200\n",
+       "10 Best Foods for You                                 194\n",
+       "CBS Sports App - Scores, News, Stats & Watch Live     192\n",
+       "Google Photos                                         191\n",
+       "Alto's Adventure                                      175\n",
+       "8fit Workouts & Meal Planner                          171\n",
+       "DRAGON BALL LEGENDS                                   167\n",
+       "Candy Crush Soda Saga                                 166\n",
+       "Clash Royale                                          165\n",
+       "Adobe Acrobat Reader                                  162\n",
+       "Episode - Choose Your Story                           160\n",
+       "Block Puzzle                                          154\n",
+       "Flow Free                                             154\n",
+       "Bubble Shooter                                        145\n",
+       "Calorie Counter - MyNetDiary                          139\n",
+       "Agar.io                                               136\n",
+       "Cooking Fever                                         135\n",
+       "Calorie Counter & Diet Tracker                        135\n",
+       "Galaxy Attack: Alien Shooter                          134\n",
+       "Colorfy: Coloring Book for Adults - Free              133\n",
+       "Gardenscapes                                          133\n",
+       "Facebook                                              132\n",
+       "                                                     ... \n",
+       "Dashlane Free Password Manager                          2\n",
+       "Amazon Prime Video                                      2\n",
+       "Google Translate                                        2\n",
+       "Google Primer                                           2\n",
+       "Calculator Plus Free                                    2\n",
+       "Draw A Stickman                                         1\n",
+       "Best Ovulation Tracker Fertility Calendar App Glow      1\n",
+       "Daily Workouts - Exercise Fitness Routine Trainer       1\n",
+       "CBS News                                                1\n",
+       "Caller ID +                                             1\n",
+       "Draw In                                                 1\n",
+       "Google Slides                                           1\n",
+       "HD Camera                                               1\n",
+       "Best Fiends - Free Puzzle Game                          1\n",
+       "Free Live Talk-Video Call                               1\n",
+       "All-in-One Mahjong 3 FREE                               1\n",
+       "Bed Time Fan - White Noise Sleep Sounds                 1\n",
+       "Google Trips - Travel Planner                           1\n",
+       "HomeWork                                                1\n",
+       "GPS Map Free                                            1\n",
+       "Discover Mobile                                         1\n",
+       "Fruit Block - Puzzle Legend                             1\n",
+       "Apartment Decorating Ideas                              1\n",
+       "Drawing for Kids Learning Games for Toddlers age 3      1\n",
+       "CallApp: Caller ID, Blocker & Phone Call Recorder       1\n",
+       "Calculator - unit converter                             1\n",
+       "Caf - Mon Compte                                        1\n",
+       "Draw a Stickman: EPIC 2                                 1\n",
+       "Calendar+ Schedule Planner App                          1\n",
+       "DashClock Widget                                        1\n",
+       "Name: App, Length: 865, dtype: int64"
+      ]
+     },
+     "execution_count": 29,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Your code here:\n"
+    "# Your code here:\n",
+    "review_missing_removed.App.value_counts()"
    ]
   },
   {
@@ -1544,23 +1618,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Your code below\n",
-    "\n",
     "def positive_function(x):\n",
-    "    \"\"\"\n",
-    "    Count how many times the string `Positive` appears in a column (exact string match).\n",
-    "    \n",
-    "    Args:\n",
-    "        x: data column\n",
-    "    \n",
-    "    Returns:\n",
-    "        The number of occurrences of `Positive` in the column data.\n",
-    "    \"\"\"\n",
-    "    return 0"
+    "    return np.where((x =='Positive'))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 55,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "23998"
+      ]
+     },
+     "execution_count": 55,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(positive_function(review_missing_removed.Sentiment)[0])"
    ]
   },
   {
@@ -1584,11 +1667,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Your code here:\n"
+    "# Your code here:\n",
+    "google_agg = \n",
+    "\n"
    ]
   },
   {
@@ -1600,7 +1685,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1618,7 +1703,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1634,7 +1719,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1652,7 +1737,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1672,7 +1757,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1690,7 +1775,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [],
    "source": [
