--- a/module-3/lab-supervised-learning-sklearn/your-code/main.ipynb
+++ b/module-3/lab-supervised-learning-sklearn/your-code/main.ipynb
@@ -224,11 +224,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Your code here:\n"
+    "from sklearn import linear_model\n"
    ]
   },
   {
@@ -240,11 +240,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Your code here:\n"
+    "diabetes_model=linear_model.LinearRegression()\n"
    ]
   },
   {
@@ -258,11 +258,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Your code here:\n"
+    "diabetes_data_train=diabetes.data[:-20]\n",
+    "diabetes_data_test=diabetes.data[-20:]\n",
+    "diabetes_target_train=diabetes.target[:-20]\n",
+    "diabetes_target_test=diabetes.target[-20:]"
    ]
   },
   {
@@ -274,11 +277,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "152.76430691633442\n",
+      "[ 3.03499549e-01 -2.37639315e+02  5.10530605e+02  3.27736980e+02\n",
+      " -8.14131709e+02  4.92814588e+02  1.02848452e+02  1.84606489e+02\n",
+      "  7.43519617e+02  7.60951722e+01]\n"
+     ]
+    }
+   ],
    "source": [
-    "# Your code here:\n"
+    "diabetes_model.fit(diabetes_data_train,diabetes_target_train)\n",
+    "print(diabetes_model.intercept_)\n",
+    "print(diabetes_model.coef_)"
    ]
   },
   {
@@ -299,11 +315,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([197.61846908, 155.43979328, 172.88665147, 111.53537279,\n",
+       "       164.80054784, 131.06954875, 259.12237761, 100.47935157,\n",
+       "       117.0601052 , 124.30503555, 218.36632793,  61.19831284,\n",
+       "       132.25046751, 120.3332925 ,  52.54458691, 194.03798088,\n",
+       "       102.57139702, 123.56604987, 211.0346317 ,  52.60335674])"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Your code here:\n"
+    "diabetes_model.predict(diabetes_data_test)\n"
    ]
   },
   {
@@ -315,11 +346,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([233.,  91., 111., 152., 120.,  67., 310.,  94., 183.,  66., 173.,\n",
+       "        72.,  49.,  64.,  48., 178., 104., 132., 220.,  57.])"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Your code here:\n"
+    "diabetes_target_test\n"
    ]
   },
   {
@@ -330,12 +373,10 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "# Your explanation here:\n"
+    "*It's not the same, as expected. Our model makes a prediction based on the data it was trained with. It's impossible to get the exact values unless you use the test data to train your model, but that would be incorrect*\n"
    ]
   },
   {
