--- a/module-3/lab-supervised-learning-sklearn/your-code/main.ipynb
+++ b/module-3/lab-supervised-learning-sklearn/your-code/main.ipynb
@@ -411,11 +411,165 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Your code here:\n"
+    "import statsmodels.api as sm\n",
+    "\n",
+    "y=diabetes_target_train\n",
+    "X=diabetes_data_train\n",
+    "X = sm.add_constant(X)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model = sm.OLS(y,X)\n",
+    "results = model.fit()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<table class=\"simpletable\">\n",
+       "<caption>OLS Regression Results</caption>\n",
+       "<tr>\n",
+       "  <th>Dep. Variable:</th>            <td>y</td>        <th>  R-squared:         </th> <td>   0.512</td>\n",
+       "</tr>\n",
+       "<tr>\n",
+       "  <th>Model:</th>                   <td>OLS</td>       <th>  Adj. R-squared:    </th> <td>   0.500</td>\n",
+       "</tr>\n",
+       "<tr>\n",
+       "  <th>Method:</th>             <td>Least Squares</td>  <th>  F-statistic:       </th> <td>   43.16</td>\n",
+       "</tr>\n",
+       "<tr>\n",
+       "  <th>Date:</th>             <td>Tue, 23 Jul 2019</td> <th>  Prob (F-statistic):</th> <td>4.64e-58</td>\n",
+       "</tr>\n",
+       "<tr>\n",
+       "  <th>Time:</th>                 <td>19:06:18</td>     <th>  Log-Likelihood:    </th> <td> -2281.1</td>\n",
+       "</tr>\n",
+       "<tr>\n",
+       "  <th>No. Observations:</th>      <td>   422</td>      <th>  AIC:               </th> <td>   4584.</td>\n",
+       "</tr>\n",
+       "<tr>\n",
+       "  <th>Df Residuals:</th>          <td>   411</td>      <th>  BIC:               </th> <td>   4629.</td>\n",
+       "</tr>\n",
+       "<tr>\n",
+       "  <th>Df Model:</th>              <td>    10</td>      <th>                     </th>     <td> </td>   \n",
+       "</tr>\n",
+       "<tr>\n",
+       "  <th>Covariance Type:</th>      <td>nonrobust</td>    <th>                     </th>     <td> </td>   \n",
+       "</tr>\n",
+       "</table>\n",
+       "<table class=\"simpletable\">\n",
+       "<tr>\n",
+       "    <td></td>       <th>coef</th>     <th>std err</th>      <th>t</th>      <th>P>|t|</th>  <th>[0.025</th>    <th>0.975]</th>  \n",
+       "</tr>\n",
+       "<tr>\n",
+       "  <th>const</th> <td>  152.7643</td> <td>    2.658</td> <td>   57.469</td> <td> 0.000</td> <td>  147.539</td> <td>  157.990</td>\n",
+       "</tr>\n",
+       "<tr>\n",
+       "  <th>x1</th>    <td>    0.3035</td> <td>   61.286</td> <td>    0.005</td> <td> 0.996</td> <td> -120.169</td> <td>  120.776</td>\n",
+       "</tr>\n",
+       "<tr>\n",
+       "  <th>x2</th>    <td> -237.6393</td> <td>   62.837</td> <td>   -3.782</td> <td> 0.000</td> <td> -361.162</td> <td> -114.117</td>\n",
+       "</tr>\n",
+       "<tr>\n",
+       "  <th>x3</th>    <td>  510.5306</td> <td>   68.156</td> <td>    7.491</td> <td> 0.000</td> <td>  376.553</td> <td>  644.508</td>\n",
+       "</tr>\n",
+       "<tr>\n",
+       "  <th>x4</th>    <td>  327.7370</td> <td>   66.876</td> <td>    4.901</td> <td> 0.000</td> <td>  196.275</td> <td>  459.199</td>\n",
+       "</tr>\n",
+       "<tr>\n",
+       "  <th>x5</th>    <td> -814.1317</td> <td>  424.044</td> <td>   -1.920</td> <td> 0.056</td> <td>-1647.697</td> <td>   19.434</td>\n",
+       "</tr>\n",
+       "<tr>\n",
+       "  <th>x6</th>    <td>  492.8146</td> <td>  344.227</td> <td>    1.432</td> <td> 0.153</td> <td> -183.850</td> <td> 1169.480</td>\n",
+       "</tr>\n",
+       "<tr>\n",
+       "  <th>x7</th>    <td>  102.8485</td> <td>  219.463</td> <td>    0.469</td> <td> 0.640</td> <td> -328.561</td> <td>  534.258</td>\n",
+       "</tr>\n",
+       "<tr>\n",
+       "  <th>x8</th>    <td>  184.6065</td> <td>  167.336</td> <td>    1.103</td> <td> 0.271</td> <td> -144.334</td> <td>  513.547</td>\n",
+       "</tr>\n",
+       "<tr>\n",
+       "  <th>x9</th>    <td>  743.5196</td> <td>  175.359</td> <td>    4.240</td> <td> 0.000</td> <td>  398.807</td> <td> 1088.232</td>\n",
+       "</tr>\n",
+       "<tr>\n",
+       "  <th>x10</th>   <td>   76.0952</td> <td>   68.293</td> <td>    1.114</td> <td> 0.266</td> <td>  -58.152</td> <td>  210.343</td>\n",
+       "</tr>\n",
+       "</table>\n",
+       "<table class=\"simpletable\">\n",
+       "<tr>\n",
+       "  <th>Omnibus:</th>       <td> 1.544</td> <th>  Durbin-Watson:     </th> <td>   2.026</td>\n",
+       "</tr>\n",
+       "<tr>\n",
+       "  <th>Prob(Omnibus):</th> <td> 0.462</td> <th>  Jarque-Bera (JB):  </th> <td>   1.421</td>\n",
+       "</tr>\n",
+       "<tr>\n",
+       "  <th>Skew:</th>          <td> 0.004</td> <th>  Prob(JB):          </th> <td>   0.491</td>\n",
+       "</tr>\n",
+       "<tr>\n",
+       "  <th>Kurtosis:</th>      <td> 2.716</td> <th>  Cond. No.          </th> <td>    224.</td>\n",
+       "</tr>\n",
+       "</table><br/><br/>Warnings:<br/>[1] Standard Errors assume that the covariance matrix of the errors is correctly specified."
+      ],
+      "text/plain": [
+       "<class 'statsmodels.iolib.summary.Summary'>\n",
+       "\"\"\"\n",
+       "                            OLS Regression Results                            \n",
+       "==============================================================================\n",
+       "Dep. Variable:                      y   R-squared:                       0.512\n",
+       "Model:                            OLS   Adj. R-squared:                  0.500\n",
+       "Method:                 Least Squares   F-statistic:                     43.16\n",
+       "Date:                Tue, 23 Jul 2019   Prob (F-statistic):           4.64e-58\n",
+       "Time:                        19:06:18   Log-Likelihood:                -2281.1\n",
+       "No. Observations:                 422   AIC:                             4584.\n",
+       "Df Residuals:                     411   BIC:                             4629.\n",
+       "Df Model:                          10                                         \n",
+       "Covariance Type:            nonrobust                                         \n",
+       "==============================================================================\n",
+       "                 coef    std err          t      P>|t|      [0.025      0.975]\n",
+       "------------------------------------------------------------------------------\n",
+       "const        152.7643      2.658     57.469      0.000     147.539     157.990\n",
+       "x1             0.3035     61.286      0.005      0.996    -120.169     120.776\n",
+       "x2          -237.6393     62.837     -3.782      0.000    -361.162    -114.117\n",
+       "x3           510.5306     68.156      7.491      0.000     376.553     644.508\n",
+       "x4           327.7370     66.876      4.901      0.000     196.275     459.199\n",
+       "x5          -814.1317    424.044     -1.920      0.056   -1647.697      19.434\n",
+       "x6           492.8146    344.227      1.432      0.153    -183.850    1169.480\n",
+       "x7           102.8485    219.463      0.469      0.640    -328.561     534.258\n",
+       "x8           184.6065    167.336      1.103      0.271    -144.334     513.547\n",
+       "x9           743.5196    175.359      4.240      0.000     398.807    1088.232\n",
+       "x10           76.0952     68.293      1.114      0.266     -58.152     210.343\n",
+       "==============================================================================\n",
+       "Omnibus:                        1.544   Durbin-Watson:                   2.026\n",
+       "Prob(Omnibus):                  0.462   Jarque-Bera (JB):                1.421\n",
+       "Skew:                           0.004   Prob(JB):                        0.491\n",
+       "Kurtosis:                       2.716   Cond. No.                         224.\n",
+       "==============================================================================\n",
+       "\n",
+       "Warnings:\n",
+       "[1] Standard Errors assume that the covariance matrix of the errors is correctly specified.\n",
+       "\"\"\""
+      ]
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "results.summary()"
    ]
   },
   {
@@ -434,12 +588,14 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "# Your answers here:"
+    "*1. The F-score is 43.16. The null hypothesis is rejected as the p-value is lower than .05.*\n",
+    "\n",
+    "*2. Yes, the coefficients with confidence intervals containing 0 are X1, X5, X6, X7, X8 and X10.*\n",
+    "\n",
+    "*3. I would get rid of the previous variables from the formula, as they don't contribute to the linear model*"
    ]
   },
   {
