--- a/module-3/lab-supervised-learning-sklearn/your-code/main.ipynb
+++ b/module-3/lab-supervised-learning-sklearn/your-code/main.ipynb
@@ -1237,11 +1237,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 86,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Your code here:\n"
+    "# Your code here:\n",
+    "X_train09, X_test09, y_train09, y_test09 = train_test_split(X, y, test_size=0.1, random_state=42)"
    ]
   },
   {
@@ -1253,11 +1254,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 87,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.8468911998183241"
+      ]
+     },
+     "execution_count": 87,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Your code here:\n"
+    "auto_model09=LinearRegression()\n",
+    "auto_model09.fit(X_train09, y_train09)\n",
+    "y_pred09=auto_model09.predict(X_test09)\n",
+    "\n",
+    "r2_score(y_test09, y_pred09)"
    ]
   },
   {
@@ -1305,7 +1321,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 89,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1321,11 +1337,45 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 91,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([ True, False, False, False,  True,  True])"
+      ]
+     },
+     "execution_count": 91,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Your code here:\n"
+    "auto_model=LinearRegression()\n",
+    "selector = RFE(auto_model, n_features_to_select=3)\n",
+    "selector = selector.fit(X, y)\n",
+    "selector.support_ "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 92,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([1, 2, 4, 3, 1, 1])"
+      ]
+     },
+     "execution_count": 92,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "selector.ranking_"
    ]
   },
   {
@@ -1337,11 +1387,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 99,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Your code here:\n"
+    "X_reduce=df[[\"cylinders\", \"displacement\", \"weight\", \"acceleration\", \"model_year\"]]\n",
+    "y_reduce = df[\"mpg\"]"
    ]
   },
   {
@@ -1355,11 +1406,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 100,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Your code here:\n"
+    "X_train_reduced, X_test_reduced, y_train_reduced, y_test_reduced = train_test_split(X_reduce, y_reduce, test_size=0.2, random_state=42)\n"
    ]
   },
   {
@@ -1371,11 +1422,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 101,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.7943702233572365"
+      ]
+     },
+     "execution_count": 101,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Your code here: \n"
+    "auto_model_reduced=LinearRegression()\n",
+    "auto_model_reduced.fit(X_train_reduced, y_train_reduced)\n",
+    "y_predred=auto_model_reduced.predict(X_test_reduced)\n",
+    "\n",
+    "r2_score(y_test_reduced, y_predred)"
    ]
   },
   {
